# SwipeDesign

./: Cargo.toml  LICENSE  README.md  index.html
src/: lib.rs
